fix: corregir descripción de tarea y ajustar overflow en estilos

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ html,
 body {
   background-color: $background-color;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
   height: 100vh;
   width: 100vw;
 }
